--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -7,7 +7,10 @@
         <view class="item-title">高血脂风险评估</view>
         <view class="item-main">
           <view class="item-lastDate">暂时无自测数据</view>
-        <view class="item-button">开始评测</view>
+        <view class="item-button" bindtap="toHyperlipidemiaSurveillance">
+        <text class="item-button-text">开始评测</text>
+        <image class="item-arrow" src="https://7072-prod-0g7y3h923f261408-1311435230.tcb.qcloud.la/green_arraw.png?sign=ac5cb065ff3e1f47f1e09e2f6ca75f09&t=1653190412"></image>
+        </view>
         </view>
       </view>
     </view>
@@ -19,7 +22,10 @@
           <view class="item-title">高血压风险评估</view>
           <view class="item-main">
             <view class="item-lastDate">暂时无自测数据</view>
-            <view class="item-button">开始评测</view>
+            <view class="item-button">
+        <text class="item-button-text">开始评测</text>
+        <image class="item-arrow" src="https://7072-prod-0g7y3h923f261408-1311435230.tcb.qcloud.la/green_arraw.png?sign=ac5cb065ff3e1f47f1e09e2f6ca75f09&t=1653190412"></image>
+        </view>
           </view>
         </view>
       </view>
@@ -31,7 +37,10 @@
           <view class="item-title">心绞痛严重分级</view>
           <view class="item-main">
             <view class="item-lastDate">暂时无自测数据</view>
-            <view class="item-button">开始评测</view>
+            <view class="item-button">
+        <text class="item-button-text">开始评测</text>
+        <image class="item-arrow" src="https://7072-prod-0g7y3h923f261408-1311435230.tcb.qcloud.la/green_arraw.png?sign=ac5cb065ff3e1f47f1e09e2f6ca75f09&t=1653190412"></image>
+        </view>
           </view>
         </view>
       </view>
@@ -43,7 +52,10 @@
           <view class="item-title">心功能严重分级</view>
           <view class="item-main">
             <view class="item-lastDate">暂时无自测数据</view>
-            <view class="item-button">开始评测</view>
+            <view class="item-button">
+        <text class="item-button-text">开始评测</text>
+        <image class="item-arrow" src="https://7072-prod-0g7y3h923f261408-1311435230.tcb.qcloud.la/green_arraw.png?sign=ac5cb065ff3e1f47f1e09e2f6ca75f09&t=1653190412"></image>
+        </view>
           </view>
         </view>
       </view>
@@ -55,7 +67,10 @@
           <view class="item-title">房颤出血，缺血风险分级</view>
           <view class="item-main">
             <view class="item-lastDate">暂时无自测数据</view>
-            <view class="item-button">开始评测</view>
+            <view class="item-button">
+        <text class="item-button-text">开始评测</text>
+        <image class="item-arrow" src="https://7072-prod-0g7y3h923f261408-1311435230.tcb.qcloud.la/green_arraw.png?sign=ac5cb065ff3e1f47f1e09e2f6ca75f09&t=1653190412"></image>
+        </view>
           </view>
         </view>
       </view>
@@ -67,7 +82,10 @@
           <view class="item-title">10年内发生动脉粥样硬化性心血管病（ASCVD）危险评估</view>
           <view class="item-main">
             <view class="item-lastDate">暂时无自测数据</view>
-            <view class="item-button">开始评测</view>
+            <view class="item-button">
+        <text class="item-button-text">开始评测</text>
+        <image class="item-arrow" src="https://7072-prod-0g7y3h923f261408-1311435230.tcb.qcloud.la/green_arraw.png?sign=ac5cb065ff3e1f47f1e09e2f6ca75f09&t=1653190412"></image>
+        </view>
           </view>
         </view>
       </view>
