--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -22,7 +22,7 @@
           <view class="item-title">高血压风险评估</view>
           <view class="item-main">
             <view class="item-lastDate">暂时无自测数据</view>
-            <view class="item-button">
+            <view class="item-button" bindtap="toHypertensionSurveillance">
         <text class="item-button-text">开始评测</text>
         <image class="item-arrow" src="https://7072-prod-0g7y3h923f261408-1311435230.tcb.qcloud.la/green_arraw.png?sign=ac5cb065ff3e1f47f1e09e2f6ca75f09&t=1653190412"></image>
         </view>
