--- a/pages/HyperlipidemiaSurveillance/HyperlipidemiaSurveillance.wxss
+++ b/pages/HyperlipidemiaSurveillance/HyperlipidemiaSurveillance.wxss
@@ -54,3 +54,35 @@ page {
     align-items: center;
     justify-content: center;
   }
+
+  .lowRisk{
+    color: green;
+    padding: 0 40rpx;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .mediumRisk{
+    color:yellow;
+    padding: 0 40rpx;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .highRisk{
+    color:orange;
+    padding: 0 40rpx;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .extremeHighRisk {
+    color: red;
+    padding: 0 40rpx;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  }
