--- a/pages/HypertensionSurveillance/HypertensionSurveillance.wxml
+++ b/pages/HypertensionSurveillance/HypertensionSurveillance.wxml
@@ -193,6 +193,12 @@
   <view slot="button">
     <button wx:if="{{mode != 'readonly'}}"  class="weui-btn" type="primary" bindtap="submitForm">确定</button>
   </view>
-  <View wx:if="{{mode == 'readonly'}}" class="score">您的当前评分：{{score}}</View>
-  <View wx:else class="score"></View>
+  <view wx:if="{{mode == 'readonly'}}">
+    <View class="score">您的当前评分：{{score}}</View>
+    <view class="score">危险评级</view>
+    <view wx:if="{{ score <= 25 }}" class="lowRisk">低危（10 年动脉粥样硬化性心血管疾病发病危险小于5%）</view>
+    <view wx:if="{{ 50 >= score > 25  }}" class="mediumRisk">中危（10 年动脉粥样硬化性心血管疾病发病危险5-9%）</view>
+    <view wx:if="{{ 75 >= score > 50  }}" class="highRisk">高危（10 年动脉粥样硬化性心血管疾病发病危险大于10%）</view>
+    <view wx:if="{{ score > 75 }}" class="extremeHighRisk">极高危（心血管疾病终生风险大于32.8%）</view>
+  </view>
 </mp-form-page>
